--- a/roles/clickhouse/defaults/main.yml
+++ b/roles/clickhouse/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
 # defaults file for clickhouse
 
-clickhouse_version: latest
+clickhouse_version: 23.1.3.5
 clickhouse_service_ensure: 'started'
 clickhouse_service_enable: true
 
