Домашнее задание к занятию "4. Работа с roles"

--- a/roles/lighthouse-role/meta/main.yml
+++ b/roles/lighthouse-role/meta/main.yml
@@ -1,6 +1,6 @@
 galaxy_info:
   author: Anastasiya Sukhodola
-  description: this is role for install and configure nginx and vector
+  description: this is role for install and configure nginx and lighthouse
   company: netology
 
   # If the issue tracker for your role is not on github, uncomment the
