--- a/roles/vector-role/meta/main.yml
+++ b/roles/vector-role/meta/main.yml
@@ -1,6 +1,6 @@
 galaxy_info:
   author: Anastasiya Sukhodola
-  description: role for install and configure Vector for CLickhouse
+  description: role for install and configure Vector for Clickhouse
   company: netology
 
   # If the issue tracker for your role is not on github, uncomment the
