--- a/requirements.yml
+++ b/requirements.yml
@@ -3,3 +3,11 @@
     scm: git
     version: "1.11.0"
     name: clickhouse
+  - src: git@github.com:ana17519/vector-role.git
+    scm: git
+    version: "1.0.0"
+    name: vector-role
+  - src: git@github.com:ana17519/lighthouse-role.git
+    scm: git
+    version: "1.0.0"
+    name: lighthouse-role
